--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ hr {
     <p></p>
   </div>
   <div class="middle">
-    <h1>COMING SOON</h1>
+    <h1>Segera Datang</h1>
     <hr>
     <p>Contact: ayohijra@gmail.com</p>
 <a href="https://www.vultr.com/?ref=7425694"><img height="50px" width="auto" src="https://www.vultr.com/media/badge_onwhite.png"></a>
