--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ hr {
   <div class="middle">
     <h1>Segera Datang</h1>
     <hr>
-    <p>Contact: ayohijra@gmail.com</p>
+    <p>Contact: ayo@hijra.id</p>
 <a href="https://www.vultr.com/?ref=7425694"><img height="50px" width="auto" src="https://www.vultr.com/media/badge_onwhite.png"></a>
   </div>
   <div class="bottomleft">
