remove genoffe studio from title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> <title>Hijra.ID by Genoffe Studio</title> <style> body, html {
+<!DOCTYPE html> <html> <title>Hijra.ID</title> <style> body, html {
     height: 100%;
     margin: 0;
 }
