--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html> <html> <title>Hijra.ID</title> <style> body, html {
     height: 100%;
     margin: 0;
@@ -39,9 +40,9 @@ hr {
     <p></p>
   </div>
   <div class="middle">
-    <h1>Segera Hijra</h1>
+    <h1>COMING SOON</h1>
     <hr>
-    <p>Contact: me@hijra.id</p>
+    <p>Contact: ayohijra@gmail.com</p>
 <a href="https://www.vultr.com/?ref=7425694"><img height="50px" width="auto" src="https://www.vultr.com/media/badge_onwhite.png"></a>
   </div>
   <div class="bottomleft">
